--- a/Thesis - Drugs.ipynb
+++ b/Thesis - Drugs.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Drugs Notebook "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Imports"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 222,
    "metadata": {},
@@ -24,6 +38,13 @@
     "import shlex\n",
     "import sklearn\n",
     "from sklearn import metrics as skmet"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Getting the Training Data"
    ]
   },
   {
@@ -56,16 +77,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x142b6b70>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x142e71f0>"
       ]
      },
-     "execution_count": 218,
+     "execution_count": 229,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -89,8 +110,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### What's in the Judgment Field?"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [
     {
@@ -185,6 +213,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Prime Data for Machine Learning"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 220,
    "metadata": {},
@@ -196,6 +231,13 @@
     "X = data.loc[:, feature_cols]\n",
     "# now we want to create our response vector\n",
     "y = data.Denied"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Feed the Data and Outcome into LogisticRegression Model"
    ]
   },
   {
@@ -262,6 +304,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Find Model Accuracy"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 226,
    "metadata": {},
@@ -288,11 +337,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Future Work ###"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. add drug types to model\n",
+    "2. add drug use vs abuse to model\n",
+    "3. add recency to model"
+   ]
   }
  ],
  "metadata": {
