--- a/Thesis - Drugs.ipynb
+++ b/Thesis - Drugs.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
@@ -77,16 +77,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x142e71f0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x148682b0>"
       ]
      },
-     "execution_count": 229,
+     "execution_count": 236,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
        "          tol=0.0001, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 221,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
        "array([ True,  True,  True, ...,  True,  True,  True])"
       ]
      },
-     "execution_count": 225,
+     "execution_count": 241,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
@@ -334,6 +334,24 @@
    ],
    "source": [
     "print('Accuracy Score for Drugs model: ',drugs_accuracy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 245,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F1 score for Drugs Model:  0.6923763386027536\n"
+     ]
+    }
+   ],
+   "source": [
+    "drugs_f1 = skmet.f1_score(y,new_pred_class)\n",
+    "print('F1 score for Drugs Model: ',drugs_f1)"
    ]
   },
   {
